// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Base without crashing 1`] = `
<div>
  <button
    class="storybook-button storybook-button--medium storybook-button--secondary"
    type="button"
  >
    This is Button
  </button>
</div>
`;

exports[`renders Disabled without crashing 1`] = `
<div>
  <button
    class="storybook-button storybook-button--medium storybook-button--secondary storybook-button--disabled"
    type="button"
  >
    This is Button
  </button>
</div>
`;

exports[`renders Large without crashing 1`] = `
<div>
  <button
    class="storybook-button storybook-button--large storybook-button--secondary"
    type="button"
  >
    This is Button
  </button>
</div>
`;

exports[`renders Primary without crashing 1`] = `
<div>
  <button
    class="storybook-button storybook-button--medium storybook-button--primary"
    type="button"
  >
    This is Button
  </button>
</div>
`;

exports[`renders Small without crashing 1`] = `
<div>
  <button
    class="storybook-button storybook-button--small storybook-button--secondary"
    type="button"
  >
    This is Button
  </button>
</div>
`;
